# edgify-agent-sdk-cpp

./: CMakeLists.txt  README.MD  async_example.cpp  readme.md  sync_example.cpp
edgifySdk/: analytics.grpc.pb.cc  analytics.grpc.pb.h  analytics.pb.cc  analytics.pb.h  prediction.grpc.pb.cc  prediction.grpc.pb.h  prediction.pb.cc  prediction.pb.h  samples.grpc.pb.cc  samples.grpc.pb.h  samples.pb.cc  samples.pb.h
protoFiles/: prediction.pb.go  prediction.pb.gw.go  prediction.proto
